src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormat_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormat_StringErrorContext.class */
public final class WGLARBPixelFormat_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nwglGetPixelFormatAttribivARB(JIIIJJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglGetPixelFormatAttribivARB(JIILjava/nio/IntBuffer;Ljava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglGetPixelFormatAttribiARB(JIIILjava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("nwglGetPixelFormatAttribfvARB(JIIIJJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglGetPixelFormatAttribfvARB(JIILjava/nio/IntBuffer;Ljava/nio/FloatBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglGetPixelFormatAttribfARB(JIIILjava/nio/FloatBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("nwglChoosePixelFormatARB(JJJIJJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglChoosePixelFormatARB(JLjava/nio/IntBuffer;Ljava/nio/FloatBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglGetPixelFormatAttribivARB(JII[I[I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglGetPixelFormatAttribfvARB(JII[I[F)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        methods.put("wglChoosePixelFormatARB(J[I[F[I[I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPixelFormatErrorContext");
        return methods;
    }
}
